--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 01 17:27:04 IST 2016
-ndk.dir=C\:\\Users\\this\\AppData\\Local\\Android\\sdk\\ndk-bundle
-sdk.dir=C\:\\Users\\this\\AppData\\Local\\Android\\sdk
+#Wed Mar 02 02:39:23 GMT+05:30 2016
+sdk.dir=/Users/manuchaudhary/Library/Android/sdk
